[gd_scene load_steps=8 format=2]

[ext_resource path="res://2d/source/scenes/builder/menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://2d/source/scenes/builder/status_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://2d/assets/themes/transparent_borders.tres" type="Theme" id=3]
[ext_resource path="res://2d/assets/themes/transparent-static.tres" type="Theme" id=4]
[ext_resource path="res://bundles/assets/images/foundation/door1.png" type="Texture" id=5]
[ext_resource path="res://2d/source/scripts/builder/dictionaries/new.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.00392157, 0.211765, 0.882353 )

[node name="Node2D" type="Node2D" groups=["builder"]]
script = ExtResource( 6 )

[node name="HeaderMenu" parent="." instance=ExtResource( 1 )]

[node name="Container" type="ScrollContainer" parent="."]
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 576.0
mouse_filter = 2
theme = ExtResource( 3 )
custom_styles/bg = SubResource( 1 )

[node name="Grid" type="GridContainer" parent="Container"]
margin_right = 1001.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
columns = 2

[node name="Label" type="Label" parent="Container/Grid"]
margin_top = 3.0
margin_right = 222.0
margin_bottom = 25.0
rect_min_size = Vector2( 222, 0 )
text = "      Upload file"
align = 2

[node name="GridContainer" type="GridContainer" parent="Container/Grid"]
margin_left = 226.0
margin_right = 1001.0
margin_bottom = 28.0
columns = 2

[node name="Button" type="Button" parent="Container/Grid/GridContainer"]
margin_right = 71.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Select"

[node name="Label2" type="Label" parent="Container/Grid/GridContainer"]
margin_left = 75.0
margin_top = 3.0
margin_right = 775.0
margin_bottom = 25.0
rect_min_size = Vector2( 700, 16 )
mouse_filter = 1
valign = 1
autowrap = true

[node name="StatusBar" parent="." instance=ExtResource( 2 )]

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 500.0
margin_bottom = 400.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png" )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 550.0
margin_bottom = 130.0
rect_min_size = Vector2( 550, 130 )
theme = ExtResource( 4 )
popup_exclusive = true
dialog_autowrap = true

[connection signal="pressed" from="Container/Grid/GridContainer/Button" to="." method="_on_upload_file_Button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="focus_exited" from="AcceptDialog" to="." method="_on_AcceptDialog_focus_exited"]
[connection signal="modal_closed" from="AcceptDialog" to="." method="_on_AcceptDialog_modal_closed"]
[connection signal="popup_hide" from="AcceptDialog" to="." method="_on_AcceptDialog_popup_hide"]
